--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,7 +10,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a href="{{ path('home') }}" class="nav-link">Accueil</a></li>
                 <li class="nav-item"><a href="{{ path('annonces') }}" class="nav-link">Parcourir les annonces</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                {#<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>#}
                 <li class="nav-item cta cta-colored"><a href="{{ path('deposer') }}" class="nav-link">Déposer une
                         annonce</a></li>
 
