--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -102,7 +102,7 @@
                                                             <div class="form-field">
                                                                 <div class="select-wrap">
                                                                     <select name="make" id="make-filter"
-                                                                            class="form-control selectpicker"
+                                                                            class=" selectpicker"
                                                                             data-live-search="true">
                                                                         <option value="">Marque</option>
                                                                         {% if makes is defined and makes is not empty %}
@@ -120,7 +120,7 @@
                                                             <div class="form-field">
                                                                 <div class="select-wrap">
                                                                     <select name="model" id="model-select"
-                                                                            class="form-control selectpicker">
+                                                                            class=" selectpicker">
                                                                         <option value="">Modèle</option>
                                                                         {% if models is defined and models is not empty %}
                                                                             {% for model in models %}
