--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -7,8 +7,8 @@ $white: #fff;
 $black: #000000;
 // $darken: #3a4348;
 
-$primary: #3182CE;
-$secondary: #ffa92d;
+$primary: #eb3b5a;
+$secondary: #eb3b5a;
 
 
 
@@ -28,14 +28,7 @@ $secondary: #ffa92d;
 }
 
 @mixin gradient-background(){
-	background: rgba(32,125,255,1);
-	background: -moz-linear-gradient(left, rgba(32,125,255,1) 0%, rgba(161,106,232,1) 100%);
-	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(32,125,255,1)), color-stop(100%, rgba(161,106,232,1)));
-	background: -webkit-linear-gradient(left, rgba(32,125,255,1) 0%, rgba(161,106,232,1) 100%);
-	background: -o-linear-gradient(left, rgba(32,125,255,1) 0%, rgba(161,106,232,1) 100%);
-	background: -ms-linear-gradient(left, rgba(32,125,255,1) 0%, rgba(161,106,232,1) 100%);
-	background: linear-gradient(to right, rgba(32,125,255,1) 0%, rgba(161,106,232,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207dff', endColorstr='#a16ae8', GradientType=1 );
+	background-color: #424C6F;
 }
 
 html {
@@ -180,8 +173,8 @@ h1, h2, h3, h4, h5,
 				}
 				&.cta-colored {
 					a{
-						border: 1px solid $secondary;
-						background: $secondary !important;
+						border: 1px solid $primary;
+						background: $primary !important;
 					}
 				}
 			}
@@ -991,7 +984,7 @@ h1, h2, h3, h4, h5,
 		margin-top: -9px;
 	}
 }
-.search-job{
+.search-annonce{
 	.form-group{
 		position: relative;
 		margin-bottom: 0;
@@ -1008,7 +1001,7 @@ h1, h2, h3, h4, h5,
 			display: block;
 		}
 		.form-control{
-			padding-left: 30px;
+			padding-left: 0;
 			display: block;
 			width: 100%;
 			font-size: 14px;
@@ -2416,4 +2409,292 @@ textarea.form-control {
 .a-title{
 	font-size: 1.5rem;
 	color:#1A202C;
+}
+
+
+@media (min-width: 360px) {
+	.list-annonce-image {
+		width: 24rem;
+		height: auto;
+	}
+}
+
+.list-annonce-price {
+	font-size: .85rem;
+	color: #eb3134;
+
+}
+.list-annonce-title {
+	color: #1A202C;
+}
+
+
+.list-annonce-entity,
+.list-annonce-meta,
+.list-annonce-place {
+	font-size: .75rem !important;
+	letter-spacing: 0;
+	color: #4A5568;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+	.list-annonce-entity,
+	.list-annonce-meta,
+	.list-annonce-place {
+		font-size: 1rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-title {
+		font-size: 1.3rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-price {
+		font-size: 1.1rem !important
+	}
+
+	.list-annonce-image {
+		width: 192px;
+		height: auto
+	}
+
+	.annonce-price {
+		font-size: 1rem
+	}
+
+}
+
+@media (min-width: 576px) and (max-width: 767px) {
+
+	.list-annonce-entity,
+	.list-annonce-meta,
+	.list-annonce-place {
+		font-size: .85rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-title {
+		font-size: 1rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-price {
+		font-size: 1rem !important
+	}
+
+
+	.list-annonce-image {
+		width: 8rem;
+		min-width: 6rem;
+		height: 8rem;
+	}
+}
+
+@media (min-width: 992px) {
+	.list-annonce-image {
+		width: 200px;
+		height: 8rem;
+	}
+
+	.list-annonce-entity,
+	.list-annonce-meta,
+	.list-annonce-place {
+		font-size: 0.95rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-title {
+		font-size: 1.2rem !important;
+		letter-spacing: 0
+	}
+
+	.list-annonce-price {
+		font-size: 1.1rem !important
+	}
+
+}
+
+@media (max-width: 575px){
+	.list-annonce-title {
+		font-size: .85rem;
+		letter-spacing: 0;
+	}
+
+	.list-annonce-price {
+		font-size: .75rem !important
+	}
+
+
+	.list-annonce-image {
+		width: 8rem;
+		min-width: 6rem;
+		height: 8rem;
+	}
+}
+
+.card-header{
+	background-color: transparent !important;
+	border-bottom: 0;
+}
+
+.category-title{
+	font-size: 1.5rem !important;
+}
+
+.nav-tabs .nav-link{
+	color: #718096;
+}
+
+.nav-tabs .nav-link {
+	border: 1px solid transparent;
+	border-top-left-radius: 0.25rem;
+	border-top-right-radius: 0.25rem;
+
+}
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+	color: #495057;
+	background-color: #fff;
+	border-color: #fff #fff #2D3748;
+}
+
+.breadcrumb{background-color: transparent}
+
+.a-title{
+	font-size: 1.5rem;
+	color:#1A202C;
+}
+
+.bootstrap-select > .btn{
+
+	padding: 0.375rem 0.75rem;
+	height: 52px !important;
+	background: #fff !important;
+	color: #000000 !important;
+	font-size: 18px;
+	border-radius: 5px;
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+	border: 1px solid #ced4da;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 999;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+}
+
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+}
+
+
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.btn-round{
+	border-radius: 25px;
+}
+
+.form-control{
+	display: block;
+	width: 100%;
+	height: calc(1.95rem + 1.2rem + .0625rem);
+	padding: .6rem .75rem;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #869ab8;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: .0625rem solid #e9ecef;
+	border-radius: .125rem;
+	box-shadow: 0 4px 30px rgba(0,0,0,.05);
+	transition: all .3s ease-in-out;
+}
+
+.font-weight-medium{
+	font-weight: 600;
+}
+
+.list-group-item{
+	border: none;
+}
+
+.bg-gray{
+	background: #f8f9fa !important;
+}
+
+#filtre #btn-form{
+
+	background: rgb(255,255,255);
+	background: -moz-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(235,242,245,0.4234068627450981) 100%);
+	background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(235,242,245,0.4234068627450981) 100%);
+	background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(235,242,245,0.4234068627450981) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ebf2f5",GradientType=1);
+
+	margin: 0 -1.5rem;
+	padding: 0.5rem 1.5rem;
+}
+
+
+#toTop{
+
+	position: fixed;
+	right: 10%;
+	top: 90%;
+	z-index: 998;
+	padding: 0.5rem 0.25rem;
+	background-color: $primary;
+	color: #fff !important;
+	border-radius: 50%;
+	width: 3rem;
+	height: 3rem;
+	text-align: center;
+}
+
+.search-annonce .form-group input[name="q"]{
+	padding-left: 30px;
+}
+.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+	width: 100%;
+}
+
+.sticky-bottom{
+	position: -webkit-sticky;
+	position: sticky;
+	bottom: 0;
+	z-index: 1020;
+}
+
+.shadow-sm--hover:hover{
+	transition: all .3s ease;
+	-webkit-box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.30);
+	-moz-box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.30);
+	box-shadow: 0px 0px 25px 0px rgba(173,173,173,0.30);
 }
