--- a/templates/front/annonce.html.twig
+++ b/templates/front/annonce.html.twig
@@ -6,7 +6,8 @@
 {% block title %} Site d'annonces auto {% endblock %}
 
 {% block stylesheets %}
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/default-skin/default-skin.css">
     <link rel="stylesheet" href="{{ asset('assets/css/swiper.css') }}">
     <style>
         .swiper-container {
@@ -58,7 +59,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="hero-wrap hero-wrap-2"
+    <div class="hero-wrap hero-wrap-2 d-none d-lg-block"
          style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 80%; height: 110px !important;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
@@ -112,16 +113,20 @@
                         </div>
                     {% endfor %}
                     <div class="swiper-container gallery-top" id="annonce-collection-image">
-                        <div class="swiper-wrapper">{% if annonce.image[0].url is iterable %}
+                        <div class="swiper-wrapper my-gallery" itemscope itemtype="http://schema.org/ImageGallery">{% if annonce.image[0].url is iterable %}
                                 {% for image in annonce.image %}
-                                    <div class="swiper-slide"
-                                         style="background-image:url({{ image.url[0] }})"></div>
+                                    <div id="{{ loop.index }}" class="swiper-slide"
+                                         style="background-image:url({{ image.url[0] }})" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+
+                                    </div>
 
                                 {% endfor %}
                             {% else %}
 
                                 {% for image in annonce.image %}
-                                    <div class="swiper-slide" style="background-image:url({{ image.url }})"></div>
+                                    <div class="swiper-slide" style="background-image:url({{ image.url }})">
+
+                                    </div>
 
                                 {% endfor %}
                             {% endif %}
@@ -135,25 +140,34 @@
                                 {% for image in annonce.image %}
 
                                     <div class="swiper-slide"
-                                         style="background-image:url({{ image.url[0] }})"></div>
+                                         style="background-image:url({{ image.url[0] }})">
+
+                                    </div>
                                 {% endfor %}
 
                             {% else %}
                                 {% for image in annonce.image %}
-                                    <div class="swiper-slide" style="background-image:url({{ image.url }})"></div>
+                                    <div class="swiper-slide" style="background-image:url({{ image.url }})">
+
+                                    </div>
 
                                 {% endfor %}
                             {% endif %}
                         </div>
                     </div>
+                    <div class="lightbox">
 
+                    </div>
 
                     <h2 class="mb-3 font-weight-medium a-title">{{ annonce.title }}</h2>
 
                     <h4 class="text-primary">{% if annonce.price is not empty %} {{ annonce.price | number_format(2,'.',',') }} € {% else %} Le prix n'a pas été défini. Contacter le vendeur {% endif %} </h4>
-                    <p style="color: #2D3748;"><i
-                                class="fa fa-map-marker mr-2"></i>{% if annonce.adress is not empty %}{{ annonce.adress['city'] }}, {{ annonce.adress['postal_code'] }}{% else %} Non spécifié*{% endif %}
-                    </p>
+                    <div class="d-flex justify-content-between align-content-center align-items-center align-self-center">
+                        <p style="color: #2D3748; margin-bottom: 0"><i
+                                    class="fa fa-map-marker mr-2"></i>{% if annonce.adress is not empty %}{{ annonce.adress['city'] }}, {{ annonce.adress['postal_code'] }}{% else %} Non spécifié*{% endif %}
+                        </p>
+                        <a href="#contact_dealer" class="btn btn-primary d-lg-none"><i class="fa fa-envelope mr-3"></i>Message</a>
+                    </div>
                     <hr>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
@@ -287,9 +301,10 @@
                     </div>
                     <hr>
                 </div>
-                <div class="col-lg-4 mt-lg-0 mt-5 sidebar ftco-animate border-1">
+                <br>
+                <div id="contact_dealer" class="col-lg-4 mt-lg-0 mt-5 sidebar ftco-animate border-1">
                     <div class="sidebar-box">
-                        <div class="card  shadow-sm" style="border: none;border-top: 4px blue solid;">
+                        <div class="card  shadow-sm" style="border: none;border-top: 4px #ed2f31 solid;">
                             <div class="card-header">
                                 <div class="media">
                                     <img src="https://via.placeholder.com/50"
@@ -382,7 +397,8 @@
 {% block javascripts %}
 
     {{ parent() }}
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.js"></script>
     <script src="{{ asset('assets/js/swiper.min.js') }}"></script>
     <script>
         var galleryThumbs = new Swiper('.gallery-thumbs', {
@@ -405,7 +421,228 @@
             thumbs: {
                 swiper: galleryThumbs,
             },
+            keyboard: {
+                enabled: true,
+            }
         });
+
+        var initPhotoSwipeFromDOM = function(gallerySelector) {
+            // parse slide data (url, title, size ...) from DOM elements
+            // (children of gallerySelector)
+            var parseThumbnailElements = function(el) {
+                var thumbElements = el.childNodes,
+                    numNodes = thumbElements.length,
+                    items = [],
+                    figureEl,
+                    linkEl,
+                    size,
+                    item;
+
+                for (var i = 0; i < numNodes; i++) {
+                    figureEl = thumbElements[i]; // <figure> element
+
+                    // include only element nodes
+                    if (figureEl.nodeType !== 1) {
+                        continue;
+                    }
+
+                    linkEl = figureEl.children[0]; // <a> element
+
+                    size = linkEl.getAttribute("data-size").split("x");
+
+                    // create slide object
+                    item = {
+                        src: linkEl.getAttribute("href"),
+                        w: parseInt(size[0], 10),
+                        h: parseInt(size[1], 10)
+                    };
+
+                    if (figureEl.children.length > 1) {
+                        // <figcaption> content
+                        item.title = figureEl.children[1].innerHTML;
+                    }
+
+                    if (linkEl.children.length > 0) {
+                        // <img> thumbnail element, retrieving thumbnail url
+                        item.msrc = linkEl.children[0].getAttribute("src");
+                    }
+
+                    item.el = figureEl; // save link to element for getThumbBoundsFn
+                    items.push(item);
+                }
+
+                return items;
+            };
+
+            // find nearest parent element
+            var closest = function closest(el, fn) {
+                return el && (fn(el) ? el : closest(el.parentNode, fn));
+            };
+
+            // triggers when user clicks on thumbnail
+            var onThumbnailsClick = function(e) {
+                e = e || window.event;
+                e.preventDefault ? e.preventDefault() : (e.returnValue = false);
+
+                var eTarget = e.target || e.srcElement;
+
+                // find root element of slide
+                var clickedListItem = closest(eTarget, function(el) {
+                    return el.tagName && el.tagName.toUpperCase() === "LI";
+                });
+
+                if (!clickedListItem) {
+                    return;
+                }
+
+                // find index of clicked item by looping through all child nodes
+                // alternatively, you may define index via data- attribute
+                var clickedGallery = clickedListItem.parentNode,
+                    childNodes = clickedListItem.parentNode.childNodes,
+                    numChildNodes = childNodes.length,
+                    nodeIndex = 0,
+                    index;
+
+                for (var i = 0; i < numChildNodes; i++) {
+                    if (childNodes[i].nodeType !== 1) {
+                        continue;
+                    }
+
+                    if (childNodes[i] === clickedListItem) {
+                        index = nodeIndex;
+                        break;
+                    }
+                    nodeIndex++;
+                }
+
+                if (index >= 0) {
+                    // open PhotoSwipe if valid index found
+                    openPhotoSwipe(index, clickedGallery);
+                }
+                return false;
+            };
+
+            // parse picture index and gallery index from URL (#&pid=1&gid=2)
+            var photoswipeParseHash = function() {
+                var hash = window.location.hash.substring(1),
+                    params = {};
+
+                if (hash.length < 5) {
+                    return params;
+                }
+
+                var vars = hash.split("&");
+                for (var i = 0; i < vars.length; i++) {
+                    if (!vars[i]) {
+                        continue;
+                    }
+                    var pair = vars[i].split("=");
+                    if (pair.length < 2) {
+                        continue;
+                    }
+                    params[pair[0]] = pair[1];
+                }
+
+                if (params.gid) {
+                    params.gid = parseInt(params.gid, 10);
+                }
+
+                return params;
+            };
+
+            var openPhotoSwipe = function(
+                index,
+                galleryElement,
+                disableAnimation,
+                fromURL
+            ) {
+                var pswpElement = document.querySelectorAll(".pswp")[0],
+                    gallery,
+                    options,
+                    items;
+
+                items = parseThumbnailElements(galleryElement);
+
+                options = {
+
+                    closeEl: true,
+                    captionEl: true,
+                    fullscreenEl: true,
+                    zoomEl: true,
+                    shareEl: false,
+                    counterEl: false,
+                    arrowEl: true,
+                    preloaderEl: true,
+
+                    galleryUID: galleryElement.getAttribute("data-pswp-uid"),
+                    getThumbBoundsFn: function(index) {
+
+                        var thumbnail = items[index].el.getElementsByTagName("img")[0],
+                            pageYScroll =
+                                window.pageYOffset || document.documentElement.scrollTop,
+                            rect = thumbnail.getBoundingClientRect();
+
+                        return { x: rect.left, y: rect.top + pageYScroll, w: rect.width };
+                    }
+                };
+
+                if (fromURL) {
+                    if (options.galleryPIDs) {
+                        for (var j = 0; j < items.length; j++) {
+                            if (items[j].pid == index) {
+                                options.index = j;
+                                break;
+                            }
+                        }
+                    } else {
+
+                        options.index = parseInt(index, 10) - 1;
+                    }
+                } else {
+                    options.index = parseInt(index, 10);
+                }
+
+                if (isNaN(options.index)) {
+                    return;
+                }
+
+                if (disableAnimation) {
+                    options.showAnimationDuration = 0;
+                }
+
+
+                gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
+                gallery.init();
+
+                /* EXTRA CODE (NOT FROM THE CORE) - UPDATE SWIPER POSITION TO THE CURRENT ZOOM_IN IMAGE (BETTER UI) */
+
+                // photoswipe event: Gallery unbinds events
+                // (triggers before closing animation)
+                gallery.listen("unbindEvents", function() {
+                    // This is index of current photoswipe slide
+                    var getCurrentIndex = gallery.getCurrentIndex();
+                    // Update position of the slider
+                    mySwiper.slideTo(getCurrentIndex, false);
+                });
+            };
+
+            // loop through all gallery elements and bind events
+            var galleryElements = document.querySelectorAll(gallerySelector);
+
+            for (var i = 0, l = galleryElements.length; i < l; i++) {
+                galleryElements[i].setAttribute("data-pswp-uid", i + 1);
+                galleryElements[i].onclick = onThumbnailsClick;
+            }
+
+            // Parse URL and open gallery if it contains #&pid=3&gid=1
+            var hashData = photoswipeParseHash();
+            if (hashData.pid && hashData.gid) {
+                openPhotoSwipe(hashData.pid, galleryElements[hashData.gid - 1], true, true);
+            }
+        };
+
+        // execute above function
+        initPhotoSwipeFromDOM(".my-gallery");
 
 
     </script>
