--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -12,12 +12,12 @@
 
 
     <div class="hero-wrap hero-wrap-2"
-         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;"
+         style="background-image: url({{ asset('assets/images/bg.jpg') }});background-position: 50% 85%;height: 24vh !important;"
          data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
-            <div class="row no-gutters slider-text align-items-end justify-content-start">
-                <div class="col-md-12 ftco-animate text-center mb-5">
+            <div class="row no-gutters slider-text align-items-start align-items-lg-center justify-content-start">
+                <div class="col-md-12 ftco-animate text-center mt-5 mt-lg-0 mb-lg-5">
                     <p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Accueil <i
                                         class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
                     <h1 class="mb-3 bread">Store</h1>
@@ -30,16 +30,21 @@
             <div class="row">
                 <div class="col">
                     <div class="media">
-                        <img src="https://www.vroomiz.fr/bundles/vrzfront/front/img/logo.png" width="75rem" class="align-self-start mr-3 img-thumbnail" alt="...">
+                        <img src="https://www.vroomiz.fr/bundles/vrzfront/front/img/logo.png" width="75rem"
+                             class="align-self-start mr-3 img-thumbnail" alt="...">
                         <div class="media-body">
                             <h5 class="mt-0">{{ dealer.dealerName }}</h5>
-                            <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en ligne</h6>
+                            <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en
+                                ligne</h6>
 
                         </div>
                     </div>
                     <hr>
-                    <p>
-                        <a href="#" class="text-dark"><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>{{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}
+                    <p style="margin-bottom: 0">
+                        <a href="#" class="text-dark">
+                            <span><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>
+                            {{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}</span>
+                            <span><i class="fa fa-phone ml-3 mr-2"></i>{{ dealer.dealerPhone }}</span>
                         </a>
 
                     </p>
@@ -64,15 +69,20 @@
             <div class="row">
                 <div class="col-lg-4 sidebar">
                     <div id="filtre" class="sidebar-box bg-white p-4 ftco-animate modal"
-                         style="border-top: 4px #206dfb solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
+                         style="border-top: 4px #eb3b5a solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
 
-                        <div class="border-0 rounded-0 bg-white  js-filter pt-5 pt-lg-0">
-                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
+                        <div class="border-0 rounded-0 bg-white  js-filter pt-3">
                             <div class="d-lg-none mb-3 sticky-top bg-white">
-                                <button class="btn btn-outline-main btn-sm btn-round" id="closeFilter" type="button"><i
+                                <button class="btn btn-outline-primary btn-sm btn-round" id="closeFilter" type="button">
+                                    <i
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
                             </div>
+                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères <br>
+                                dans <i>{{ dealer.dealerName }}</i></h3>
+                            <p>Vos recherches seront limitées à ce que propose le vendeur. Si vous souhaitez voir plus
+                                d'annonces, cliquez
+                                <a href="{{ path('annonces') }}">ici</a>.</p>
 
                             {{ form_start(form) }}
                             <div class="form-group">
@@ -82,24 +92,20 @@
                             <div class="form-group">
                                 {{ form_label(form.make, "Recherche par marque") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.make, {'attr': {'class': 'selectpicker ', 'id': 'make-filter', 'data-live-search': true, 'title': "Marque"}}) }}
+                                {{ form_widget(form.make, {'attr': {'class': 'selectpicker ', 'id': 'make-filter', 'data-live-search': true, 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.model, "Recherche par modèle") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.model, {'attr': {'id':'model-select'}}) }}
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.bodyStyle, "Catégorie") }}
-                                {{ form_widget(form.bodyStyle) }}
+                                {{ form_widget(form.model, {'attr': {'id':'model-select', 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.fuelType, "Carburant") }}
-                                {{ form_widget(form.fuelType) }}
+                                {{ form_widget(form.fuelType, {'attr': {'class': 'selectpicker ', 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.transmission, "Boîte de vitesse") }}
-                                {{ form_widget(form.transmission) }}
+                                {{ form_widget(form.transmission, {'attr': {'class': 'selectpicker ', 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par année</label>
@@ -111,9 +117,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par kilométrage</label>
+                                <div id="sliderKilometer" data-min="{{ minKilometer }}"
+                                     data-max="{{ maxKilometer }}"></div>
                                 <div class="d-flex flex-row justify-content-between mt-3">
-                                    {{ form_widget(form.minKilometer, { 'attr': { 'class': ' mr-1 w-50', 'title': "Kilométrage minimum"}}) }}
-                                    {{ form_widget(form.maxKilometer, { 'attr': { 'class': ' ml-1 w-50', 'title': "KIlomètrage maximun"}}) }}
+                                    {{ form_widget(form.minMileage, { 'attr': { 'class': ' mr-1 w-50', 'title': "Kilométrage minimum"}}) }}
+                                    {{ form_widget(form.maxMileage, { 'attr': { 'class': ' ml-1 w-50', 'title': "KIlomètrage maximun"}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
@@ -201,7 +209,7 @@
             </div>
         </div>
     </section>
-    <a href="#top"><i class="fa fa-arrow-up"></i></a>
+    <a href="#top" id="toTop" class="smoothscroll"><i class="fa fa-arrow-up"></i></a>
 
 {% endblock %}
 
@@ -259,6 +267,31 @@
 
         }
 
+        const sliderKilometer = document.getElementById('sliderKilometer');
+        if (sliderKilometer) {
+            minKilometer = document.getElementById('minMileage');
+            maxKilometer = document.getElementById('maxMileage');
+            const minValueKilometer = Math.floor(parseInt(sliderKilometer.dataset.min, 10) / 10) * 10;
+            const maxValueKilometer = Math.ceil(parseInt(sliderKilometer.dataset.max, 10) / 10) * 10;
+            const rangeKilometer = noUiSlider.create(sliderKilometer, {
+                start: [minKilometer.value || minValueKilometer, maxKilometer.value || maxValueKilometer],
+                connect: true,
+                step: 1,
+                range: {
+                    'min': 0,
+                    'max': 300000
+                }
+            });
+            rangeKilometer.on('slide', function (values, handle) {
+                if (handle === 0) {
+                    minKilometer.value = Math.round(values[0]);
+                }
+                if (handle === 1) {
+                    maxKilometer.value = Math.round(values[1]);
+                }
+            })
+        }
+
         const sliderYear = document.getElementById('sliderYear');
 
         if (sliderYear) {
@@ -296,7 +329,6 @@
 
         $(document).ready(() => {
             fetchModelByMake($('#make').val());
-            console.log("first : ")
         });
 
         /*
@@ -304,7 +336,6 @@
         * */
         $('#make').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
             fetchModelByMake(this.value);
-            console.log("change : ")
         });
 
         function fetchModelByMake(value) {
