--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -43,11 +43,11 @@
                         {% if app.request.get('model') is not empty %} {{ app.request.get('model')|capitalize }}{% endif %}
                     </span>
                     <div class="dropdown">
-                        <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenuButton"
+                        <button class="btn btn-outline-dark dropdown-toggle" type="button" id="filter"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Trier par
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <div class="dropdown-menu" aria-labelledby="filter">
                             <a class="dropdown-item" href="#">+ récents</a>
                             <a class="dropdown-item" href="#">Another action</a>
                             <a class="dropdown-item" href="#">Something else here</a>
@@ -62,17 +62,15 @@
             <div class="row">
                 <div class="col-lg-4 sidebar">
                     <div id="filtre" class="sidebar-box bg-white p-4 ftco-animate modal"
-                         style="border-top: 4px #206dfb solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
+                         style="border-top: 4px #eb3b5a solid;border-top-right-radius: 4px;border-top-left-radius: 4px;">
 
                         <div class="border-0 rounded-0 bg-white sticky-top js-filter">
-
-                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
                             <div class="d-lg-none mb-3 sticky-top bg-white">
-                                <button class="btn btn-outline-main btn-sm btn-round" id="closeFilter" type="button"><i
+                                <button class="btn btn-outline-primary btn-sm btn-round" id="closeFilter" type="button"><i
                                             class="fas fa-chevron-left mr-3"></i>retour
                                 </button>
                             </div>
-
+                            <h3 class="heading-sidebar mt-5 mt-lg-0">Chercher par critères</h3>
 
                             {{ form_start(form) }}
                             <div class="form-group">
@@ -87,19 +85,15 @@
                             <div class="form-group">
                                 {{ form_label(form.model, "Recherche par modèle") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.model, {'attr': {'id':'model-select', 'class': ''}}) }}
-                            </div>
-                            <div class="form-group">
-                                {{ form_label(form.bodyStyle, "Catégorie") }}
-                                {{ form_widget(form.bodyStyle) }}
+                                {{ form_widget(form.model, {'attr': {'id':'model-select', 'class': 'selectpicker'}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.fuelType, "Carburant") }}
-                                {{ form_widget(form.fuelType) }}
+                                {{ form_widget(form.fuelType, {'attr': {'class': 'selectpicker ', 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.transmission, "Boîte de vitesse") }}
-                                {{ form_widget(form.transmission) }}
+                                {{ form_widget(form.transmission, {'attr': {'class': 'selectpicker ', 'title': "Aucune préférence"}}) }}
                             </div>
                             <div class="form-group">
                                 <label for="">Chercher par année</label>
@@ -114,8 +108,8 @@
                                 <div id="sliderKilometer" data-min="{{ minKilometer }}"
                                      data-max="{{ maxKilometer }}"></div>
                                 <div class="d-flex flex-row justify-content-between mt-3">
-                                    {{ form_widget(form.minKilometer, { 'attr': { 'class': ' mr-1 w-50', 'title': "Kilométrage minimum"}}) }}
-                                    {{ form_widget(form.maxKilometer, { 'attr': { 'class': ' ml-1 w-50', 'title': "KIlomètrage maximun"}}) }}
+                                    {{ form_widget(form.minMileage, { 'attr': { 'class': ' mr-1 w-50', 'title': "Kilométrage minimum"}}) }}
+                                    {{ form_widget(form.maxMileage, { 'attr': { 'class': ' ml-1 w-50', 'title': "KIlomètrage maximun"}}) }}
                                 </div>
                             </div>
                             <div class="form-group">
@@ -146,7 +140,7 @@
                             <span class="mb-3 d-lg-none text-dark font-weight-medium">
                                 <span class="text-primary">{{ annonces.totalItemCount }}</span>
                                     résultat(s)
-                                    {% if app.request.get('q') is not empty %} -  {{ app.request.get('q') }}{% endif %}
+                                    {% if app.request.get('q') is not empty %} - {{ app.request.get('q') }}{% endif %}
                                     {% if app.request.get('make') is not empty %} - {{ app.request.get('make')|capitalize }}{% endif %}
                                     {% if app.request.get('model') is not empty %} {{ app.request.get('model')|capitalize }}{% endif %}
                             </span>
@@ -264,8 +258,8 @@
         }
         const sliderKilometer = document.getElementById('sliderKilometer');
         if (sliderKilometer) {
-            minKilometer = document.getElementById('minKilometer');
-            maxKilometer = document.getElementById('maxKilometer');
+            minKilometer = document.getElementById('minMileage');
+            maxKilometer = document.getElementById('maxMileage');
             const minValueKilometer = Math.floor(parseInt(sliderKilometer.dataset.min, 10) / 10) * 10;
             const maxValueKilometer = Math.ceil(parseInt(sliderKilometer.dataset.max, 10) / 10) * 10;
             const rangeKilometer = noUiSlider.create(sliderKilometer, {
