Ajout de lightbox - Modification de la notification de contact 'Message envoyé' - Test de performance - SEO - Accesibilité

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -2,7 +2,7 @@
     <div class="container-fluid px-md-4	">
         <a class="navbar-brand" href="{{ path('home') }}">PubAuto</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="ftco-nav" aria-expanded="true" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
         </button>
 
