--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
+ {% block title %}Boutique de {{ dealer.dealerName }}{% endblock %}
 {% block head %}
     {{ parent() }}
 
+    <meta name="description" content="{{ dealer.dealerName }} - Liste de véhicules uniquement proposés par {{ dealer.dealerName }}. Le filtre a été construit pour vous simplifier la tâche.">
+    <meta name="keywords" content="{{ dealer.dealerName }}, {{ dealer.dealerPhone }}, vehicule, rechercher
+    {% if app.request.get('q') is not empty %}, {{ app.request.get ('q')}} {% endif %}
+    {% if app.request.get('make') is not empty %}, {{ app.request.get ('make')}} {% endif %}
+    {% if app.request.get('model') is not empty %}, {{ app.request.get ('model')}} {% endif %}">
 {% endblock %}
-{% block title %} Site d'annonces auto {% endblock %}
 {% block stylesheets %}
+    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('assets/css/nouislider.css') }}">
 {% endblock %}
 {% block body %}
@@ -18,8 +24,8 @@
         <div class="container">
             <div class="row no-gutters slider-text align-items-start align-items-lg-center justify-content-start">
                 <div class="col-md-12 ftco-animate text-center mt-5 mt-lg-0 mb-lg-5">
-                    <p class="breadcrumbs mb-0"><span class="mr-3"><a href="index.html">Accueil <i
-                                        class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
+                    <p class="breadcrumbs mb-0"><span class="mr-3">
+                            <a href="{{ path('home') }}" title="Accéder à la page d'accueil">Accueil <i class="ion-ios-arrow-forward"></i></a></span> <span>Annonces</span></p>
                     <h1 class="mb-3 bread">Store</h1>
                 </div>
             </div>
@@ -30,8 +36,8 @@
             <div class="row">
                 <div class="col">
                     <div class="media">
-                        <img src="https://www.vroomiz.fr/bundles/vrzfront/front/img/logo.png" width="75rem"
-                             class="align-self-start mr-3 img-thumbnail" alt="...">
+                        <img src="{{ asset('assets/images/partenaire-vroomiz.png') }}" width="75px"
+                             class="align-self-start mr-3 img-thumbnail" alt="Logo de partenaire Vroomiz" title="Logo de partenaire Vroomiz">
                         <div class="media-body">
                             <h5 class="mt-0">{{ dealer.dealerName }}</h5>
                             <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en
@@ -41,11 +47,11 @@
                     </div>
                     <hr>
                     <p style="margin-bottom: 0">
-                        <a href="#" class="text-dark">
-                            <span><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>
-                            {{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}</span>
-                            <span><i class="fa fa-phone ml-3 mr-2"></i>{{ dealer.dealerPhone }}</span>
-                        </a>
+                       <a href="https://maps.google.com/maps?q={{ dealer.annonces[0].latitude }},{{ dealer.annonces[0].longitude }}&hl=fr"
+                       title="Voir l'emplacement de l'annonce" class="text-dark">
+                           <i class="fas fa-map-marker-alt mr-2 text-primary" aria-hidden="true"></i>
+                            {{ dealer.annonces[0].adress.city ~ " " ~ dealer.annonces[0].adress.region ~ ", " ~ dealer.annonces[0].adress.postal_code }}</a>
+                        <a href="tel:{{ dealer.dealerPhone }}" title="Appeler le vendeur" class="text-dark"><i class="fa fa-phone ml-3 mr-2  text-primary"></i>{{ dealer.dealerPhone }}</a>
 
                     </p>
 
@@ -82,7 +88,7 @@
                                 dans <i>{{ dealer.dealerName }}</i></h3>
                             <p>Vos recherches seront limitées à ce que propose le vendeur. Si vous souhaitez voir plus
                                 d'annonces, cliquez
-                                <a href="{{ path('annonces') }}">ici</a>.</p>
+                                <a href="{{ path('annonces') }}" title="Accéder à la liste des annonces">ici</a>.</p>
 
                             {{ form_start(form) }}
                             <div class="form-group">
@@ -151,39 +157,41 @@
                             {% if annonces|length > 0 %}
                                 {% for annonce in annonces %}
                                     <article class="annonce-post-item rounded d-flex mb-3 shadow-sm--hover">
-                                        <div class=" d-flex justify-content-center py-1 px-1">
-                                            <img class="list-annonce-image"
-                                                 src="{% if annonce.image[0].url is iterable %}{{ annonce.image[0].url[0] }}{% else %} {{ annonce.image[0].url }} {% endif %}"
-                                                 style="object-fit: cover;"
-                                                 alt="Image de {{ annonce.make }} {{ annonce.model }}">
-                                        </div>
-                                        <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
-                                            <a class="list-annonce-title font-weight-medium"
-                                               href="{{ path('annonce', {'slug': annonce.slug }) }}"
-                                               title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
-                                                    class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
-                                            <div class="mb-auto ">
-                                                <div class="row">
-                                                    <div class="col-6 text-truncate">
-                                                        <a class="list-annonce-place" href="#"><i
-                                                                    class="fas fa-map-marker-alt mr-2 text-main"></i>{{ annonce.adress.city|capitalize }}
-                                                        </a>
-                                                    </div>
-                                                    <div class="col-6 text-right text-truncate">
-                                                        <a class="list-annonce-entity"
-                                                           href="{{ path('dealer_store', { 'slug' : dealer.slug }) }}">{{ dealer.dealerName|capitalize }}</a>
+                                        <a href="{{ path('annonce', {'slug': annonce.slug }) }}" title="Voir l'annonce {{ annonce.title }}">
+                                            <div class=" d-flex justify-content-center py-1 px-1">
+                                                <img class="list-annonce-image"
+                                                     src="{% if annonce.image[0].url is iterable %}{{ annonce.image[0].url[0] }}{% else %} {{ annonce.image[0].url }} {% endif %}"
+                                                     style="object-fit: cover;"
+                                                     alt="Image de {{ annonce.make }} {{ annonce.model }}" title="Image de {{ annonce.make }} {{ annonce.model }}">
+                                            </div>
+                                            <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
+                                                <a class="list-annonce-title font-weight-medium"
+                                                   href="{{ path('annonce', {'slug': annonce.slug }) }}"
+                                                   title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
+                                                        class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
+                                                <div class="mb-auto ">
+                                                    <div class="row">
+                                                        <div class="col-6 text-truncate">
+                                                            <a class="list-annonce-place" href="https://maps.google.com/maps?q={{ annonce.latitude }},{{ annonce.longitude }}&hl=fr" title="Voir l'emplacement de l'annonce"><i
+                                                                        class="fas fa-map-marker-alt mr-2 text-main"></i>{{ annonce.adress.city|capitalize }}
+                                                            </a>
+                                                        </div>
+                                                        <div class="col-6 text-right text-truncate">
+                                                            <a class="list-annonce-entity"
+                                                               href="{{ path('dealer_store', { 'slug' : dealer.slug }) }}" title="Voir la boutique du vendeur">{{ dealer.dealerName|capitalize }}</a>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <p class="list-annonce-meta mb-auto d-flex justify-content-between"><span>
+                                                <p class="list-annonce-meta mb-auto d-flex justify-content-between"><span>
 											<i class="fas fa-road mr-2"></i>{{ annonce.mileage | number_format(0,'.',' ') }} km</span><span><i
-                                                            class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
-                                                        class="d-none d-sm-block"><i
-                                                            class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
-                                                        class="d-none d-sm-block"><i
-                                                            class="fas fa-calendar-day mr-2"></i>{{ annonce.year }}</span>
-                                            </p>
-                                        </div>
+                                                                class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
+                                                            class="d-none d-sm-block"><i
+                                                                class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
+                                                            class="d-none d-sm-block"><i
+                                                                class="fas fa-calendar-day mr-2"></i>{{ annonce.year }}</span>
+                                                </p>
+                                            </div>
+                                        </a>
                                     </article>
                                 {% endfor %}
 
@@ -209,7 +217,7 @@
             </div>
         </div>
     </section>
-    <a href="#top" id="toTop" class="smoothscroll"><i class="fa fa-arrow-up"></i></a>
+    <a href="#top" id="toTop" class="smoothscroll" title="Scroller vers le haut"><i class="fa fa-arrow-up"></i></a>
 
 {% endblock %}
 
