--- a/templates/front/recherche.twig
+++ b/templates/front/recherche.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
+ {% block title %}Trouver votre véhicule avec PubAuto{% endblock %}
 {% block head %}
     {{ parent() }}
 
+    <meta name="description" content="Trouver un véhicule parmi notre catalogue grâce à notre moteur de recherche. Cela vous permettra de trouver le véhicule qui vous correspond selon vos critères.">
+    <meta name="keywords" content="vehicule, recherche, critère
+    {% if app.request.get('q') is not empty %}, {{ app.request.get ('q')}} {% endif %}
+    {% if app.request.get('make') is not empty %}, {{ app.request.get ('make')}} {% endif %}
+    {% if app.request.get('model') is not empty %}, {{ app.request.get ('model')}} {% endif %}">
 {% endblock %}
-{% block title %} Site d'annonces auto {% endblock %}
 {% block stylesheets %}
+    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('assets/css/nouislider.css') }}">
 {% endblock %}
 {% block body %}
@@ -120,7 +126,7 @@
                                     {{ form_widget(form.maxPrice, { 'attr': { 'class': ' ml-1 w-50', 'title': "Prix maximun" }}) }}
                                 </div>
                             </div>
-                            <div class="sticky-bottom" id="btn-form">
+                            <div class="sticky-bottom" id="btn-form" style="bottom: -24px;">
                                 <button type="submit" class="btn btn-primary btn-block" style="padding: 1rem 0.75rem"><i
                                             class="fas fa-search mr-2"></i>
                                     Chercher
@@ -148,39 +154,41 @@
                                 {% for annonce in annonces %}
 
                                     <article class="annonce-post-item rounded d-flex mb-3 shadow-sm--hover">
-                                        <div class=" d-flex justify-content-center py-1 px-1">
-                                            <img class="list-annonce-image"
-                                                 src="{% if annonce.image[0].url is iterable %}{{ annonce.image[0].url[0] }}{% else %} {{ annonce.image[0].url }} {% endif %}"
-                                                 style="object-fit: cover;"
-                                                 alt="Image de {{ annonce.make }} {{ annonce.model }}">
-                                        </div>
-                                        <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
-                                            <a class="list-annonce-title"
-                                               href="{{ path('annonce', {'slug': annonce.slug }) }}"
-                                               title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
-                                                    class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
-                                            <div class="mb-auto ">
-                                                <div class="row">
-                                                    <div class="col-6 text-truncate">
-                                                        <a class="list-annonce-place" href="{{ path('annonces', {'q': annonce.adress.city|lower}) }}"><i
-                                                                    class="fas fa-map-marker-alt mr-2 text-main"></i>{{ annonce.adress.city|capitalize }}
-                                                        </a>
-                                                    </div>
-                                                    <div class="col-6 text-right text-truncate">
-                                                        <a class="list-annonce-entity"
-                                                           href="{{ path('dealer_store', { 'slug' : annonce.dealer.slug }) }}">{{ annonce.dealer.dealerName|capitalize }}</a>
+                                        <a href="{{ path('annonce', {'slug': annonce.slug}) }}" title="Voir l'annonce - {{ annonce.make ~ " " ~ annonce.model }}">
+                                            <div class=" d-flex justify-content-center py-1 px-1">
+                                                <img class="list-annonce-image"
+                                                     src="{% if annonce.image[0].url is iterable %}{{ annonce.image[0].url[0] }}{% else %} {{ annonce.image[0].url }} {% endif %}"
+                                                     style="object-fit: cover;"
+                                                     alt="Image de {{ annonce.make }} {{ annonce.model }}" title="Image de {{ annonce.make }} {{ annonce.model }}">
+                                            </div>
+                                            <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
+                                                <a class="list-annonce-title"
+                                                   href="{{ path('annonce', {'slug': annonce.slug }) }}"
+                                                   title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
+                                                        class=" list-annonce-price mb-auto font-weight-bold">{{ annonce.price | number_format(0,'.','.') }} €</span>
+                                                <div class="mb-auto ">
+                                                    <div class="row">
+                                                        <div class="col-6 text-truncate">
+                                                            <a class="list-annonce-place" href="{{ path('annonces', {'q': annonce.adress.city|lower}) }}" title="Rechercher en fonction de la localisation"><i
+                                                                        class="fas fa-map-marker-alt mr-2 text-main"></i>{{ annonce.adress.city|capitalize }}
+                                                            </a>
+                                                        </div>
+                                                        <div class="col-6 text-right text-truncate">
+                                                            <a class="list-annonce-entity"
+                                                               href="{{ path('dealer_store', { 'slug' : annonce.dealer.slug }) }}">{{ annonce.dealer.dealerName|capitalize }}</a>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <p class="list-annonce-meta mb-auto d-flex justify-content-between"><span>
+                                                <p class="list-annonce-meta mb-auto d-flex justify-content-between"><span>
 											<i class="fas fa-road mr-2"></i>{{ annonce.mileage | number_format(0,'.',' ') }} km</span><span><i
-                                                            class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
-                                                        class="d-none d-sm-block"><i
-                                                            class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
-                                                        class="d-none d-sm-block"><i
-                                                            class="fas fa-calendar-day mr-2"></i>{{ annonce.year }}</span>
-                                            </p>
-                                        </div>
+                                                                class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
+                                                            class="d-none d-sm-block"><i
+                                                                class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
+                                                            class="d-none d-sm-block"><i
+                                                                class="fas fa-calendar-day mr-2"></i>{{ annonce.year }}</span>
+                                                </p>
+                                            </div>
+                                        </a>
                                     </article>
                                 {% endfor %}
 
